[project]
name = "robotframework-gnmi-yang-connector"
version = "0.1.0"
description = "GnmiYangConnector - A gNMI library for Robot Framework leveraging pyats' yang.connector"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.poetry]
authors = ["oboehmer@cisco.com"]
description = "A gNMI library for Robot Framework leveraging pyats' yang.connector."
documentation = "https://github.com/netascode/robotframework-gnmi-yang-connector"
homepage = "https://github.com/netascode/robotframework-gnmi-yang-connector"
license = "LICENSE"
maintainers = ["oboehmer@cisco.com"]
name = "robotframework-gnmi-yang-connector"
readme = "README.md"
repository = "https://github.com/netascode/robotframework-gnmi-yang-connector"
version = "0.1.0"
packages = [{include = "GnmiYangConnector"}]

[tool.poetry.dependencies]
python = "~=3.10"
robotframework = ">=7.0"
pyats = ">=25.10"
"pyats.robot" = ">=25.10"
genie = ">=25.10"
"yang.connector" = ">=25.10"
"json-duplicate-keys" = "==2025.9.30"

[tool.poetry.group.dev.dependencies]
pytest = "~=8.2"
pytest-cov = "~=6.0"
pytest-mock = "~=3.14"
mypy = "^1.16.1"
pre-commit = "^4.2.0"
ruff = ">=0.12.10"
types-pyyaml = "^6.0.12.20250516"

[tool.coverage.run]
source = ["GnmiYangConnector"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "@abstract", "except ImportError:"]
omit = ["*/__main__.py"]

[tool.mypy]
# The mypy configurations: http://bit.ly/2zEl9WI
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = false
disallow_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
python_version = "3.10"
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = false

[tool.pytest.ini_options]
markers = ["unit", "integration"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry_core>=1.0.0"]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "ruff>=0.12.11",
    "types-pyyaml>=6.0.12.20250822",
]
